@@ -1,3 +1,8 @@
+2006-09-11  Andrew Haley  <aph@redhat.com>
+
+	* gij.cc (main): Remove bogus code that sets LTDL_SHLIBPATH_VAR
+	and forks.
+
 2006-06-16  Andrew Haley  <aph@redhat.com>
 
 	* java/lang/natClassLoader.cc (_Jv_NewClassFromInitializer): Don't
